<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context="com.mecnology.ace.metroguide.MetoLines">

    <LinearLayout
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="@dimen/_25sdp"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Metro Lines" />

        <Button
            android:onClick="FirstLine"
            android:id="@+id/button"
            style="@style/style1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/first_line" />

        <Button
            android:onClick="SecondLine"
            android:id="@+id/button2"
            style="@style/style1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/second_line" />

        <Button
            android:onClick="ThirdLine"
            android:id="@+id/button3"
            style="@style/style1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/third_line" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
